Fix spacing around icons for Post/Publish button (#233)

--- a/internal/static/css/99-twtxt.css
+++ b/internal/static/css/99-twtxt.css
@@ -173,3 +173,8 @@ video {
 .captchaInput {
   width: 50% !important;
 }
+
+/* Fix spacing for Post/Publish button and icons */
+.icss-print, .icss-paper-plane {
+  margin-right:20px !important;
+}
